# AdvancedProgramming_Ex3

./: BattleShip.cpp  BattleShip.h  Board.cpp  Board.h  CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameManager.cpp  GameManager.h  IBattleshipGameAlgo.h  Logger.cpp  Logger.h  OriginalBoard.cpp  OriginalBoard.h  PlayerBoard.cpp  PlayerBoard.h  README.md  SmartPlayer.cpp  SmartPlayer.h  TournamentManager.cpp  TournamentManager.h  Util.cpp  Util.h  config1.config  main.cpp
ex3_314576349_304817471_303021406/: CMakeLists.txt  students.txt
